customer/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: customer-service
spec:
  host: customer-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
